--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -2,38 +2,38 @@
 
 {% block content %}
 
-    <br>
+<!--    <br>-->
 
-    <div class="row">
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Visitor: {{ visitors.user }}</h5>
-                <hr>
-                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>
+<!--    <div class="row">-->
+<!--        <div class="col-md">-->
+<!--            <div class="card card-body">-->
+<!--                <h5>Visitor: {{ visitors.user }}</h5>-->
+<!--                <hr>-->
+<!--                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>-->
+<!--                <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>-->
 
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Contact Information</h5>
-                <hr>
-                <p>Firstname: {{ user.first_name }}</p>
-                <p>Lastname: {{ user.last_name }}</p>
-                <p>Email: {{ visitors.email }}</p>
-                <p>Phone: {{ visitors.phone_num }}</p>
-            </div>
-        </div>
+<!--        <div class="col-md">-->
+<!--            <div class="card card-body">-->
+<!--                <h5>Contact Information</h5>-->
+<!--                <hr>-->
+<!--                <p>Firstname: {{ user.first_name }}</p>-->
+<!--                <p>Lastname: {{ user.last_name }}</p>-->
+<!--                <p>Email: {{ visitors.email }}</p>-->
+<!--                <p>Phone: {{ visitors.phone_num }}</p>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Total Events</h5>
-                <hr>
-                <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
-            </div>
-        </div>
-    </div>
+<!--        <div class="col-md">-->
+<!--            <div class="card card-body">-->
+<!--                <h5>Total Events</h5>-->
+<!--                <hr>-->
+<!--                <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <br>
     <div class="row">
